[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "strappy"
version = "0.6.0"
description = "Utility package for data science"
readme = "README.md"
requires-python = ">=3.7"
authors = [{ name = "Greg Strabel", email = "gregory.strabel@gmail.com"}]
license = { file = "LICENSE" }
classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies", "optional-dependencies"]
#dependencies=[
#    "scikit-learn>=1.2.0",
#    "numpy>=1.20.3",
#    "pandas>=1.3.4",
#    "scipy>=1.7.1",
#    "matplotlib>=3.4.3",
#    "feature-engine>=1.3"
#]
#[project.optional-dependencies]
#test = [
#  "pytest>6.0.0",
#  "pytest-cov[all]>=4.0",
#  "codecov>=2.1"
#]
[tool.setuptools.packages.find]
where = [""]
include = ["strappy*"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies.test = {file = ["requirements_test.txt"]}

[tool.bumpver]
current_version = "0.6.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message  = "Bump version {old_version} -> {new_version}"
commit          = true
tag             = true
push            = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"strappy/__init__.py" = ["{version}"]
"docs_src/conf.py" = ["release = '{version}'"]